Change static file structure for ease of use

--- a/playez/templates/playez/index.html
+++ b/playez/templates/playez/index.html
@@ -1,8 +1,10 @@
 {% extends "playez/layout.html" %}
 {% load static %}
 
-{% block title %}Playez - Any game Any where{% endblock %}
+{% block title %}Playez - Any game, any where{% endblock %}
+
+{% block header %}
+{% endblock %}
 
 {% block body %}
-    <h1>Hello world</h1>
 {% endblock %}
