Create log_in_out pages update css

--- a/playez/static/playez/css/dark.css
+++ b/playez/static/playez/css/dark.css
@@ -6,8 +6,34 @@
         color: var(--primary-dark);
     }
 
+    a {
+        color: var(--suplimentary-dark-1);
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: var(--suplimentary-dark-2);
+        text-decoration: underline;
+    }
+
     .header {
         background-color: var(--secondary-dark);
-        box-shadow: 0px 1px 10px #757575;
+        box-shadow: 0px 0px 9px #757575;
+    }
+
+    .form-input:focus-visible {
+        outline: none;
+        border: 1px solid var(--suplimentary-dark-1);
+    }
+    
+    .form-title {
+        color: #ffffff;
+        background-color: var(--neutral-dark);
+        border-bottom: 1px solid #bdbdbd;
+    }
+
+    .form-submit-btn {
+        color: #ffffff;
+        background-color: var(--neutral-dark);
     }
 }
