--- a/playez/templates/playez/create.html
+++ b/playez/templates/playez/create.html
@@ -1,7 +1,7 @@
 {% extends "playez/layout.html" %}
 {% load static %}
 
-{% block title %}Playez - Any game, any where{% endblock %}
+{% block title %}Create new game - Playez{% endblock %}
 
 {% block body %}
     <div class="main">
