--- a/playez/templates/playez/test.html
+++ b/playez/templates/playez/test.html
@@ -1,83 +1,104 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-        margin: 0;
-        background-color: #000;
-        color: #fff;
-        font-family: Monospace;
-        font-size: 13px;
-        line-height: 24px;
-        overscroll-behavior: none;
-      }
-      #menu {
-		margin: 0;
-		padding-top: 100px;
-		top: 0;
-		left: 0;
-		z-index: 200;
-		position: fixed;
-        height: 100%;
-        width: 100%;
-        text-align: center;
-        background-color: #00000052;
-		user-select: none;
-      }
-	  .canvas {
-		top: 0;
-		left: 0;
-		position: fixed;
-	  }
-	  @keyframes out {
-		0%   {opacity: 1;}
-		99%  {
-			opacity: 0;
-			display: block;
-		}
-		100% {
-			opacity: 0;
-			display: none;
-		}
-	  }
-	  @keyframes in {
-		0%   {opacity: 0;}
-		99%  {
-			opacity: 1;
-			display: none;
-		}
-		100% {
-			opacity: 1;
-			display: block;
-		}
-	  }
-    </style>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@v0.149.0/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@v0.149.0/examples/jsm/"
-        }
-      }
-    </script>
-	<script>
-		var csrf_token = "{{ csrf_token }}";
-	</script>
-  </head>
-  <body>
-    <div id="game-container">
-        <div id="menu">
-			<p style="font-size:36px">
-				Click to play
-			</p>
-			<p>
-				Move: WASD<br/>
-				Jump: SPACE<br/>
-				Look: MOUSE
-			</p>
-		</div>
-    </div>
-    <script type="module" src="{% static '/playez/js/your_script.js' %}?{% now 'U' %}"></script>
-  </body>
+    <head>
+        <style>
+            body {
+                margin: 0;
+                background-color: #000;
+                color: #fff;
+                font-family: Monospace;
+                font-size: 13px;
+                line-height: 24px;
+                overscroll-behavior: none;
+            }
+            #menu {
+                /* remove the slash for prod *
+                display: none;
+                /* */
+                margin: 0;
+                padding-top: 100px;
+                top: 0;
+                left: 0;
+                z-index: -5;
+                position: fixed;
+                height: 100%;
+                width: 100%;
+                text-align: center;
+                background-color: #00000052;
+                user-select: none;
+            }
+            #canvas {
+                top: 0;
+                left: 0;
+                position: fixed;
+                height: 100%;
+                width: 100%;
+                z-index: -10;
+            }
+            @keyframes out {
+                0%   {opacity: 1;}
+                99%  {
+                    opacity: 0;
+                    display: block;
+                }
+                100% {
+                    opacity: 0;
+                    display: none;
+                }
+            }
+            @keyframes in {
+                0%   {opacity: 0;}
+                99%  {
+                    opacity: 1;
+                    display: none;
+                }
+                100% {
+                    opacity: 1;
+                    display: block;
+                }
+            }
+        </style>
+        <script type="importmap">
+            {
+                "imports": {
+                    "tween": "https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.6.4/dist/tween.esm.min.js"
+                }
+            }
+        </script>
+        <!-- Babylon.js -->
+        <script src="https://cdn.babylonjs.com/cannon.js"></script>
+        <script src="https://cdn.babylonjs.com/babylon.js"></script>
+        <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+        <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+        <script>
+            var csrf_token = "{{ csrf_token }}";
+            var code = 0;
+            var skin = 'mcdonald';
+            var weapon = "gun";
+        </script>
+        <meta name="csrf-token" content="{{ csrf_token }}">
+    </head>
+    <body>
+        <div id="game-container">
+            <div id="menu">
+                <p style="font-size:36px">
+                    Click to play
+                </p>
+                <label for="">Username:</label>
+                <input id="skin_input" type="text" placeholder="Enter skin name" class="exclude" value="mcdonald">
+                <input id="weapon_input" type="text" placeholder="Enter weapon name" class="exclude" value="gun">
+                <input id="code_input" type="text" placeholder="Enter Game Code" class="exclude" value="111">
+                <input type="button" value="Join" class="exclude" id="join_btn"><br/>
+                <p>
+                Move: WASD<br/>
+                Jump: SPACE<br/>
+                Look: MOUSE
+                </p>
+                <input type="button" value="Leave" class="exclude" id="leave_btn">
+            </div>
+            <canvas id="canvas"></canvas>
+        </div>
+        <script type="module" src="{% static '/playez/js/client-script.js' %}?{% now 'U' %}"></script>
+    </body>
 </html>
