Added new game features and refactored existing code

--- a/playez/templates/playez/playez_3d_game.html
+++ b/playez/templates/playez/playez_3d_game.html
@@ -90,6 +90,8 @@
                 <input id="weapon_input" type="text" placeholder="Enter weapon name" class="exclude" value="gun">
                 <input id="code_input" type="text" placeholder="Enter Game Code" class="exclude" value="111">
                 <input type="button" value="Join" class="exclude" id="join_btn"><br/>
+                <input type="button" value="Create" class="exclude" id="create_btn">
+                <input type="button" value="Show Debugger" class="exclude" id="debugger"><br/>
                 <p>
                 Move: WASD<br/>
                 Jump: SPACE<br/>
