--- a/playez/templates/playez/playez_3d_game.html
+++ b/playez/templates/playez/playez_3d_game.html
@@ -75,7 +75,7 @@
             var csrf_token = "{{ csrf_token }}";
             var code = 0;
             var skin = "";
-            var weapon = "Hand-gun";
+            var weapon = "Sniper";
         </script>
         <meta name="csrf-token" content="{{ csrf_token }}">
     </head>
